Changed RecordID in chooseLeaf to MBR